# colorpack

./: LICENSE  README.md  pyproject.toml  test.py
src/colorpack/: __init__.py  colorset.py  gradients.py  palettes.py
