[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colorpack"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.5",
    "cycler>=0.11",
]

[tool.setuptools.packages.find]
where = ["src"]